tests/ui/async-await/async-closures/not-fn.stderr
error: async closure does not implement `FnMut` because it captures state from its environment
  --> $DIR/not-fn.rs:9:14
   |
LL |     needs_fn(async || {
   |     -------- ^^^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_fn`
  --> $DIR/not-fn.rs:6:28
   |
LL |     fn needs_fn<T>(_: impl FnMut() -> T) {}
   |                            ^^^^^^^^^^^^ required by this bound in `needs_fn`

error: aborting due to 1 previous error

